# 6y1s-Data-Mining

./: .gitignore  CMakeLists.txt
reports/: ИАД л5 Регрессия.docx  ИАД л6 Панорама.docx  ИАД лаб1.docx  ИАД лаб2.docx  ИАД лаб3.docx  ИАД лаб4.docx
src/: 1KMeans.hpp  1_Clustering.hpp  2_Mahalanobis.hpp  2_MovementEnergy.hpp  3_MotionVector.hpp  3_MotionVectorVideo.hpp  4_Classification.hpp  5_Regression.hpp  6_Panorama.hpp  Top.cpp  logger.hpp
